[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Weapons/Gun.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Weapons/glock.bmp" type="Texture" id=2]
[ext_resource path="res://Sfx/weapons/handgun/usp.wav" type="AudioStream" id=3]
[ext_resource path="res://Sfx/weapons/handgun/pis_clipout.wav" type="AudioStream" id=4]
[ext_resource path="res://Sfx/weapons/rifle/ak47_reload.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Weapons/elite_d.bmp" type="Texture" id=6]
[ext_resource path="res://Sprites/particles/muzzle.png" type="Texture" id=7]

[node name="Gun" type="Node2D"]
position = Vector2( 213.783, 186.488 )
rotation = -1.5708
z_index = 1
script = ExtResource( 1 )
gun_name = "Glock"
gun_d_img = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2( -0.0565491, -15.4116 )

[node name="muzzle_flash" type="Sprite" parent="Muzzle"]
visible = false
position = Vector2( 1.58228, -9.22607 )
rotation = -1.5708
scale = Vector2( 0.0632557, 0.0609472 )
texture = ExtResource( 7 )

[node name="Reload_time" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -108.011, -3.97758 )
texture = ExtResource( 2 )
offset = Vector2( 108.364, -8.76697 )

[node name="fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="clipOut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.226303, -16.6856 )
cast_to = Vector2( 0, -750 )
collision_mask = 3

[node name="reload" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.25705, -0.0515289 )
stream = ExtResource( 5 )

[node name="recoil_reset" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Reload_time" to="." method="_on_Reload_time_timeout"]
[connection signal="timeout" from="recoil_reset" to="." method="_on_recoil_reset_timeout"]
